[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyreka"
version = "1.0.0"
authors = [
  { name="George Allaway", email="george.w.allaway@gmail.com" },
]
description = "Package for finding python functions in codebases and environment packages"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["search", "functions", "finder"]
dependencies = [
  "rich==12.6.0",
  "typer==0.7.0"
]
[tool.setuptools]
packages = ["pyreka"]

[project.urls]
"Homepage" = "https://github.com/Allaway11/python-function-search"
"Bug Tracker" = "https://github.com/Allaway11/python-function-search/issues"

[project.scripts]
hello-world = "pyreka:hello_world"